small fixes in column resizing
1) preventing text selection on double-click on resizer.
2) fix problems in Chrome with unneeded horizontal scrollbar because the
width of the btable was float and less as to 1px higher as the width of
bdiv.

--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -166,6 +166,12 @@
 	width: .3em;
 	position: relative;
 	cursor: e-resize;
+	-webkit-touch-callout: none;
+	-khtml-user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: -moz-none;
+	-webkit-user-select: none;
+	user-select: none;
 	display: inline;
 	overflow: hidden;
 }
@@ -314,6 +320,12 @@
 	background-color: #777;
 	cursor: e-resize;
 	cursor: col-resize;
+	-webkit-touch-callout: none;
+	-khtml-user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: -moz-none;
+	-webkit-user-select: none;
+	user-select: none;
 	position: absolute;
 	top: 0;
 	height: 100px;
